# OperatingSystems

./: .gitignore
Colloqium_operations_from_file/: CMakeLists.txt  README.md
Colloqium_operations_from_file/Colloqium_operations_from_file/: CMakeLists.txt  Colloqium_operations_from_file.cpp  Colloqium_operations_from_file.h
OS1/: CMakeLists.txt
OS1/Creator/: CMakeLists.txt  Creator.cpp
OS1/Employee/: CMakeLists.txt  Employee.h
OS1/Main/: CMakeLists.txt  Main.cpp
OS1/Reporter/: CMakeLists.txt  Reporter.cpp
OS2/: CMakeLists.txt
OS2/OS2/: CMakeLists.txt  OS2.cpp  OS2.h
OS3/: CMakeLists.txt
OS3/OS3/: CMakeLists.txt  OS3.cpp  OS3.h
OS4/: CMakeLists.txt
OS4/Receiver/: CMakeLists.txt  Receiver.cpp
OS4/Sender/: CMakeLists.txt  Sender.cpp
OS5/: CMakeLists.txt  README.md
OS5/Client/: CMakeLists.txt  Client.cpp
OS5/Employee/: CMakeLists.txt  Employee.h
OS5/Server/: CMakeLists.txt  Server.cpp
